--- a/src/reset.css
+++ b/src/reset.css
@@ -1,21 +1,30 @@
-/* stylesheet 초기화 */
+/* user agent stylesheet 초기화 */
+
 * {
-    margin: 0;
-    font-family: "Pretendard";
+  box-sizing: border-box;
+  margin: 0;
+  font-family: "Pretendard";
+  word-break: keep-all;
 }
 
-html, body {
-    font-size: 62.5%;
+html,
+body {
+  font-size: 62.5%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+input:focus {
+  outline: none;
 }
 
 button {
-    border: none;
-    padding: unset;
-    background-color: unset;
-    cursor: pointer;
-  }
-
-a {
-    text-decoration: none;
-    cursor: pointer;
+  border: none;
+  padding: unset;
+  background-color: unset;
+  cursor: pointer;
 }
