--- a/src/sign.css
+++ b/src/sign.css
@@ -75,6 +75,7 @@ header {
   row-gap: 2.4rem;
 }
 
+
 .sign-input-box {
   display: flex;
   flex-direction: column;
@@ -102,8 +103,19 @@ header {
   border-color: var(--primary);
 }
 
+.sign-password {
+  position: relative;
+}
+
+
+.error-message {
+  font-size: 1.4rem; 
+  font-weight: 400;
+  color: var(--red);
+}
+
 .eye-button {
-  position: absolute;
+  position: absolute ;
   bottom: 2.2rem;
   right: 1.5rem;
   width: 1.6rem;
