--- a/css/landing.css
+++ b/css/landing.css
@@ -1,7 +1,10 @@
 /* landing */
 * {
   box-sizing: border-box;
-  
+}
+
+html {
+  font-size: 10px;
 }
 
 body {
@@ -16,7 +19,7 @@ nav {
   position: sticky;
   top: 0;
   width: 100%;
-  height: 94px;
+  height: 9.4rem;
   background-color: var(--gray5);
 }
 
@@ -25,16 +28,16 @@ nav {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1920px;
-  margin-top: 20px;
+  max-width: 192rem;
+  margin-top: 2rem;
   margin-left: auto;
   margin-right: auto;
 }
 
 .logo-image {
-  width: 133px;
-  height: 24px;
-  margin-left: 200px;
+  width: 13.3rem;
+  height: 2.4rem;
+  margin-left: 20rem;
 }
 
 .login-button {
@@ -45,12 +48,12 @@ nav {
   background-image: linear-gradient(91deg, var(--primary) 0%, #6AE3FE 101%);
   border-radius: 8px;
   color: #f5f5f5;
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 600;
-  width: 128px;
-  padding: 16px 20px;
+  width: 12.8rem;
+  padding: 1.6rem 2rem;
   text-decoration: none;
-  margin-right: 200px;
+  margin-right: 20rem;
 }
 
 header {
@@ -65,7 +68,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 7rem;
   margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
@@ -73,9 +76,9 @@ header {
 
 .slogan {
   text-align: center;
-  font-size: 64px;
+  font-size: 6.4rem;
   font-weight: 700;
-  line-height: 80px;
+  line-height: 8rem;
   
 }
 
@@ -86,7 +89,7 @@ header {
   -webkit-text-fill-color: transparent;
 }
 
-.CTA {
+.cta {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,21 +97,21 @@ header {
   background-image: linear-gradient(91deg, var(--primary) 0%, #6AE3FE 101%);
   border-radius: 8px;
   color: #f5f5f5;
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 600;
-  width: 350px;
-  padding: 16px 20px;
+  width: 35rem;
+  padding: 1.6rem 2rem;
   text-decoration: none;
-  margin-top: 40px;
+  margin-top: 4rem;
 }
 
 .header-section-img {
-  margin-top: 40px;
+  margin-top: 4rem;
 }
 
 main {
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding-top: 7rem;
+  padding-bottom: 7rem;
 }
 
 .section {
@@ -116,19 +119,19 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 157px;
-  margin: 50px;
+  gap: 15.7rem;
+  margin: 5rem;
   margin-left: auto;
   margin-right: auto;
 }
 
 .section-container {
-  width: 400px;
-  gap: 10px;
+  width: 40rem;
+  gap: 1rem;
 }
 
 .section-title {
-  font-size: 48px;
+  font-size: 4.8rem;
   font-weight: 700;
 }
 
@@ -161,16 +164,16 @@ main {
 }
 
 .description {
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 150%;
   color: #6b6b6b;
-  margin-top: 10px;
+  margin-top: 1rem;
 }
 
 .section-img {
-  width: 550px;
-  height: 450px;
+  width: 55rem;
+  height: 45rem;
 }
 
 footer {
@@ -178,7 +181,7 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 10rem;
   margin-bottom: auto;
   width: 100%;
   height: auto;
@@ -191,19 +194,19 @@ footer {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1920px;
-  margin: 35px 105px 65px 105px;
+  max-width: 192rem;
+  margin: 3.5rem 10.5rem 6.5rem 10.5rem;
 }
 
 .copyrigter {
   color: #676767;
   text-align: center;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .footer-helper {
   display: flex;
-  gap: 30px;
+  gap: 3rem;
 }
 
 .helper-box {
@@ -214,13 +217,13 @@ footer {
 .footer-FAQ {
   color: #cfcfcf;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1.6rem;
   cursor: pointer;
 }
 
 .footer-icons {
   display: flex;
-  gap: 12px;
+  gap: 1.2rem;
   cursor: pointer;
 }
 
@@ -228,25 +231,25 @@ footer {
 
 @media (max-width: 1200px) {
   .navbar {
-    margin: 20px;
+    margin: 2rem;
   }
 
   .logo-image {
-    width: 133px;
-    height: 24px;
-    margin-left: 32px;
+    width: 13.3rem;
+    height: 2.4rem;
+    margin-left: 3.2rem;
   }
 
   .login-button {
-    width: 128px;
-    font-size: 18px;
+    width: 12.8rem;
+    font-size: 1.8rem;
     font-weight: 600;
-    padding: 16px 20px;
-    margin-right: 32px;
+    padding: 1.6rem 2rem;
+    margin-right: 3.2rem;
   }
 
   header {
-    padding-top: 40px;
+    padding-top: 4rem;
     padding-bottom: 0;
   }
 
@@ -256,29 +259,29 @@ footer {
   }
 
   .CTA {
-    width: 350px;
-    padding: 16px 20px;
-    margin-top: 40px;
-    font-size: 18px;
+    width: 35rem;
+    padding: 1.6rem 2rem;
+    margin-top: 4rem;
+    font-size: 1.8rem;
     font-weight: 600;
     
   }
 
   .header-section-img {
-    margin-top: 40px;
-    width: 700px;
-    height: 343px;
+    margin-top: 4rem;
+    width: 70rem;
+    height: 34.3rem;
   }
 
   main {
-    padding-top: 80px;
-    padding-bottom: 70px;
+    padding-top: 8rem;
+    padding-bottom: 7rem;
   }
 
   .section {
     margin-top: 0px;
-    margin-bottom: 100px;
-    gap: 51px;
+    margin-bottom: 10rem;
+    gap: 5.1rem;
   }
 
   .section-container {
@@ -290,8 +293,8 @@ footer {
   }
 
   .section-img {
-    width: 385px;
-    height: 315px;
+    width: 38.5rem;
+    height: 31.5rem;
   }
 
   footer {
@@ -300,7 +303,7 @@ footer {
 
   .footer-section {
     align-items: flex-start;
-    margin: 32px 104px 64px 104px;
+    margin: 3.2rem 10.4rem 6.4rem 10.4rem;
   }
 
 }
@@ -309,27 +312,27 @@ footer {
 
 @media (max-width: 768px) {
   .navbar {
-    margin-top: 13px;
-    margin-bottom: 13px;
+    margin-top: 1.3rem;
+    margin-bottom: 1.3rem;
     margin-right: auto;
     margin-left: auto;
   }
 
   .logo-image {
-    width: 89px;
-    height: 16px;
+    width: 8.9rem;
+    height: 1.6rem;
   }
 
   .login-button {
-    width: 80px;
+    width: 8rem;
     height: auto;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 600;
-    padding: 10px 16px;
+    padding: 1rem 1.6rem;
   }
 
   header {
-    padding: 28px 32px 0 32px;
+    padding: 2.8rem 3.2rem 0 3.2rem;
   }
 
   .header-section {
@@ -339,24 +342,24 @@ footer {
   }
 
   .slogan {
-    font-size: 32px;
+    font-size: 3.2rem;
     font-weight: 700;
-    line-height: 42px;
+    line-height: 4.2rem;
   }
 
   .CTA {
-    width: 200px;
-    padding: 10px 16px;
-    margin-top: 24px;
-    font-size: 14px;
+    width: 20rem;
+    padding: 1rem 1.6rem;
+    margin-top: 2.4rem;
+    font-size: 1.4rem;
     font-weight: 600;
     
   }
 
   .header-section-img {
-    margin-top: 24px;
-    width: 325px;
-    height: 160px;
+    margin-top: 2.4rem;
+    width: 32.5rem;
+    height: 16rem;
   }
 
   main {
@@ -367,8 +370,8 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 390px;
-    margin: 40px 32px;
+    width: 39rem;
+    margin: 4rem 3.2rem;
     gap: 0;
   }
 
@@ -384,32 +387,34 @@ footer {
   }
 
   .section-title {
-    font-size: 24px;
+    font-size: 2.4rem;
     width: 100%;
+    order: 1;
   }
 
   .description {
-    margin-top: 10px;
-    font-size: 15px;
+    margin-top: 1rem;
+    font-size: 1.5rem;
     font-weight: 500;
     line-height: 150%;
+    order: 3;
   }
 
   .section-img {
     width: 100%;
     height: 100%;
-    margin-top: 24px;
+    margin-top: 2.4rem;
   }
 
   footer {
-    margin-top: 40px;
+    margin-top: 4rem;
   }
 
   .footer-section {
     position: relative;
-    margin: 32px 32px 32px 32px;
-    gap: 60px;
-    min-height: 60px;
+    margin: 3.2rem 3.2rem 3.2rem 3.2rem;
+    gap: 6rem;
+    min-height: 6rem;
   }
 
   .copyrigter {
