--- a/assets/css/commons/colors.css
+++ b/assets/css/commons/colors.css
@@ -1,11 +1,8 @@
 :root {
   --primary-color: #6d6afe;
-  --red-color: #ff5b56;
+  --error-color: #ff5b56;
   --black-color: #111322;
   --white-color: #ffffff;
-  --gray1-color: #3e3e43;
-  --gray2-color: #9fa6b2;
-  --gray3-color: #ccd5e3;
-  --gray4-color: #e7effb;
-  --gray5-color: #f0f6ff;
+  --border-color: #ccd5e3;
+  --background-color: #f0f6ff;
 }
