--- a/assets/css/commons/shared.css
+++ b/assets/css/commons/shared.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 16px 0;
-  background: linear-gradient(90.99deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+  background: linear-gradient(90.99deg, var(--primary-color) 0.12%, #6ae3fe 101.84%);
   border-radius: 8px;
   color: var(--white-color);
   font-weight: 600;
@@ -11,7 +11,7 @@
 }
 
 .auth-form__input.input-border--red {
-  border: 1px solid var(--red-color);
+  border: 1px solid var(--error-color);
 }
 
 @media (max-width: 767px) {
