--- a/assets/css/pages/main.css
+++ b/assets/css/pages/main.css
@@ -4,7 +4,7 @@
   position: sticky;
   top: 0;
   padding: 20px 200px;
-  background: var(--gray5-color);
+  background: var(--background-color);
 }
 
 .header__inner {
@@ -20,7 +20,7 @@
 }
 
 .main {
-  background-color: var(--gray5-color);
+  background-color: var(--background-color);
 }
 
 .main__content {
@@ -38,7 +38,7 @@
 }
 
 .main__text--gradient {
-  background: linear-gradient(91.26deg, #6d6afe 17.28%, #ff9f9f 74.98%);
+  background: linear-gradient(91.26deg, var(--primary-color) 17.28%, #ff9f9f 74.98%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
