--- a/signin/signin.css
+++ b/signin/signin.css
@@ -11,10 +11,6 @@
   --gray-F0F6FF: #f0f6ff;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 body {
   width: 100vw;
   height: 100vh;
@@ -122,6 +118,10 @@ body {
   position: absolute;
   top: 43px;
   right: 15px;
+}
+
+.img-link img {
+  display: block;
 }
 
 @media (max-width: 767px) {
