--- a/style.css
+++ b/style.css
@@ -197,8 +197,7 @@ body {
   column-gap: 12px;
 }
 
-.tablet_br,
-.mobile_br {
+.tablet_br {
   display: none;
 }
 
@@ -282,15 +281,17 @@ body {
   }
 
   .main_section_img {
-    width: 303px;
-    height: 179px;
     margin-top: 38px;
+    padding: 0 32px;
+    width: 100%;
+    height: 100%;
   }
 
   .flex_boxs {
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
+    padding: 0 32px;
   }
 
   .boxs_margin_top {
@@ -306,11 +307,6 @@ body {
     line-height: 22.5px;
   }
 
-  .imgs {
-    width: 325px;
-    height: 266px;
-  }
-
   .boxs_margin {
     margin-top: 76px;
   }
@@ -322,10 +318,6 @@ body {
   .desktop_br,
   .tablet_br {
     display: none;
-  }
-
-  .mobile_br {
-    display: inline;
   }
 
   .footer {
@@ -350,5 +342,14 @@ body {
 
   .footer_linkbox {
     order: 3;
+  }
+
+  .imgs {
+    width: 100%;
+    height: 100%;
+  }
+
+  .mobile_br {
+    display: inline;
   }
 }
