--- a/signup/signup.css
+++ b/signup/signup.css
@@ -100,7 +100,7 @@ body {
   cursor: pointer;
 }
 
-.footer {
+.div {
   width: 400px;
   display: flex;
   justify-content: space-between;
@@ -112,12 +112,12 @@ body {
   margin-top: 32px;
 }
 
-.footer_text {
+.div_text {
   color: #373740;
   font-size: 14px;
 }
 
-.footer_link {
+.div_link {
   width: 100px;
   display: flex;
   justify-content: space-between;
@@ -136,7 +136,7 @@ body {
     width: 325px;
   }
 
-  .footer {
+  .div {
     width: 325px;
   }
 }
