--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
   font-size: 48px;
   font-weight: 700;
   letter-spacing: -0.3px;
+  line-height: normal;
 }
 
 .flex_box_p {
@@ -265,6 +266,7 @@ body {
     width: 80px;
     padding: 10px 16px;
     font-size: 14px;
+    line-height: normal;
   }
 
   .main_section_text {
