4주차 위클리 미션 시작

--- a/signin/signin.css
+++ b/signin/signin.css
@@ -18,7 +18,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: Pretendard;
+  font-family: Pretendard, sans-serif;
   background-color: var(--gray-F0F6FF);
 }
 
@@ -67,10 +67,11 @@ body {
   border-radius: 8px;
   background-color: var(--white-FFF);
   font-size: 16px;
+  position: relative;
 }
 
 .input:focus {
-  border: 1px solid var(--pirmary-6d6afe);
+  outline: 1px solid var(--pirmary-6d6afe);
 }
 
 .button {
