--- a/signin/signin.css
+++ b/signin/signin.css
@@ -50,6 +50,7 @@ body {
 .form_section_div {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .div_margin {
@@ -67,7 +68,6 @@ body {
   border-radius: 8px;
   background-color: var(--white-FFF);
   font-size: 16px;
-  position: relative;
 }
 
 .input:focus {
@@ -123,6 +123,14 @@ body {
 
 .img-link img {
   display: block;
+}
+
+.error-msg-on {
+  position: absolute;
+  top: 82px;
+  color: #ff5b56;
+  font-size: 14px;
+  line-height: normal;
 }
 
 @media (max-width: 767px) {
