--- a/Linkbrary/src/scss/pages/_auth-page.scss
+++ b/Linkbrary/src/scss/pages/_auth-page.scss
@@ -52,6 +52,9 @@ main {
             border: 1px solid a.$primary-color;
           }
         }
+        .wrong-input {
+          border: 1px solid a.$red-color;
+        }
 
         .pw-input {
           position: relative;
