--- a/assets/CSS/sign.css
+++ b/assets/CSS/sign.css
@@ -132,7 +132,7 @@ body {
   gap: .625rem;
   width: 25rem;
   padding: 1rem 1.25rem;
-  margin-top: .625rem;
+  margin-top: 1.875rem;
   border: solid 1px rgba(0,0,0,.15);
   cursor: pointer;
 }
