Add password show & hide switching function to icon

--- a/signin/style-signin.css
+++ b/signin/style-signin.css
@@ -102,11 +102,22 @@ body {
   position: relative;
 }
 
-.eye {
+.password-toggle {
+  width: 16px;
+  aspect-ratio: 1/1;
   position: absolute;
   top: 50%;
   right: 15px;
   transform: translate(-50%,-50%);
+  cursor: pointer;
+}
+
+.eye-slash {
+  background: url("../images/eye-off.svg");
+}
+
+.eye {
+  background: url("../images/eye-on.svg");
 }
 
 .btn {
