--- a/Linkbrary/src/scss/pages/_home.scss
+++ b/Linkbrary/src/scss/pages/_home.scss
@@ -73,7 +73,7 @@
   gap: 32px;
 }
 
-.kebab {
+.more-info-btn {
   width: 12px;
   aspect-ratio: 12/10;
 }
@@ -85,10 +85,23 @@
 .link-list {
   @include a.flex(column, flex-start, stretch);
   gap: 20px;
-}
 
-.link-list-bar {
-  @include a.flex(row, space-between, stretch);
+  .link-list-bar {
+    @include a.flex(row, space-between, stretch);
+
+    .select-all-btn {
+      background-color: a.$primary-color;
+      color: a.$white-color;
+    }
+
+    .select-favorite-btn {
+      border: 1px solid a.$primary-color;
+    }
+
+    .select-folder-btn {
+      border: 1px solid a.$primary-color;
+    }
+  }
 }
 
 .link-cards {
@@ -131,6 +144,18 @@
   background-color: a.$grey-light-color;
   border-radius: 10px;
   padding: 15px 16px;
+
+  .search-input {
+    width: 100%;
+    background-image: url("../../img/Search.svg");
+    background-repeat: no-repeat;
+    background-position: left center;
+    font-size: 1em;
+    background-color: inherit;
+    padding: 0 32px;
+    color: a.$grey-dark-color;
+    border: none;
+  }
 }
 
 .search-box {
@@ -153,34 +178,9 @@
   gap: 30px;
 }
 
-.search-input {
-  width: 100%;
-  background-image: url("../../img/Search.svg");
-  background-repeat: no-repeat;
-  background-position: left center;
-  font-size: 1em;
-  background-color: inherit;
-  padding: 0 32px;
-  color: a.$grey-dark-color;
-  border: none;
-}
-
 .search-result {
   font-size: 2em;
   margin-bottom: 10px;
-}
-
-.select-all-btn {
-  background-color: a.$primary-color;
-  color: a.$white-color;
-}
-
-.select-favorite-btn {
-  border: 1px solid a.$primary-color;
-}
-
-.select-folder-btn {
-  border: 1px solid a.$primary-color;
 }
 
 .share-bg {
@@ -194,29 +194,27 @@
 .share-link-btn {
   @include a.flex(column, flex-start, center);
   gap: 10px;
-}
 
-.share-link-btn a img {
-  border-radius: 50%;
-}
+  a {
+    .share-link-logo {
+      width: 42px;
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+      &:hover {
+        box-shadow: 0 0 10px a.$skyblue-color;
+      }
+    }
+  }
 
-.share-link-btn a img:hover {
-  box-shadow: 0 0 10px a.$skyblue-color;
-}
-
-.share-link-logo {
-  width: 42px;
-  aspect-ratio: 1/1;
-}
-
-.share-link-name {
-  color: #444;
-  text-align: center;
-  font-family: Inter;
-  font-size: 0.8125em;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 15px;
+  .share-link-name {
+    color: #444;
+    text-align: center;
+    font-family: Inter;
+    font-size: 0.8125em;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 15px;
+  }
 }
 
 .thumbnail {
