로그인 페이지 input 에러 상황일 때 focus스타일 나타나지 않게 수정

--- a/assets/css/pages/auth.css
+++ b/assets/css/pages/auth.css
@@ -79,6 +79,7 @@
   padding: 18px 15px;
   border: 1px solid var(--border-color);
   border-radius: 8px;
+  outline: none;
   font-size: 1rem;
   font-weight: 400;
   line-height: 24px;
@@ -86,7 +87,11 @@
 }
 
 .auth-form__input:focus {
-  outline: 1px solid var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.auth-form__input.input-border--red {
+  border: 1px solid var(--error-color);
 }
 
 .auth-form__notice {
