비밀번호 유효성 검사 기능 구현 완료

--- a/weeklyMission1/css/style.css
+++ b/weeklyMission1/css/style.css
@@ -347,6 +347,12 @@ a.navbar-login {
     color: red;
 }
 
+.password-check-error-msg {
+    margin-top: 10px;
+    font-size: 14px;
+    color: red;
+}
+
 .signin-social-login p {
     color: var(--Linkbrary-gray100, #373740);
     font-family: Pretendard;
