--- a/src/sign/sign.css
+++ b/src/sign/sign.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: var(--gray5);
-    padding-top: 150px;
+    padding-top: 180px;
 }
 
 /* m a i n */
@@ -94,8 +94,7 @@ main {
 
 .eye_button {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 48px;
     right: 15px; 
     width: 16px;
     height: 16px;
