--- a/5th_week_mission/src/sign.css
+++ b/5th_week_mission/src/sign.css
@@ -89,6 +89,12 @@ header {
   border-color: var(--primary);
 }
 
+.pwdErrorLine,
+.emailErrorLine,
+.pwdCheckErrorLine {
+  border-color: var(--red);
+}
+
 .eye-button {
   position: absolute;
   bottom: 2.2rem;
