회원가입 시 유효성 검사 기능 구현 완료

--- a/weeklyMission1/css/style.css
+++ b/weeklyMission1/css/style.css
@@ -341,6 +341,18 @@ a.navbar-login {
     color: red;
 }
 
+.signup-email-error-msg {
+    margin-top: 10px;
+    font-size: 14px;
+    color: red;
+}
+
+.signup-password-error-msg {
+    margin-top: 10px;
+    font-size: 14px;
+    color: red;
+}
+
 .password-error-msg {
     margin-top: 10px;
     font-size: 14px;
