--- a/5th_week_mission/src/landing.css
+++ b/5th_week_mission/src/landing.css
@@ -41,7 +41,7 @@ header {
   padding-top: 7rem;
 }
 
-.cta {
+.sign-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,11 +54,11 @@ header {
   font-weight: 600;
 }
 
-.cta-short {
+.sign-button-short {
   width: 12.8rem;
 }
 
-.cta-long {
+.sign-button-long {
   width: 35rem;
 }
 
