--- a/login/signin.css
+++ b/login/signin.css
@@ -120,7 +120,7 @@ header {
   position: relative;
 }
 
-.cta {
+.form-group__login-button {
   display: flex;
   justify-content: center;
   align-items: center;
