refactor : after code review

--- a/signin.css
+++ b/signin.css
@@ -95,6 +95,9 @@ body {
   align-items: flex-start;
   gap: 12px;
 }
+.input-section.password__section {
+  position: relative;
+}
 .error {
   display: none;
 }
@@ -110,6 +113,12 @@ body {
   border-radius: 8px;
   border: 1px solid rgba(204, 213, 227, 1);
   padding: 18px 15px;
+}
+i {
+  position: absolute;
+  left: 90%;
+  top: 45px;
+  z-index: 1;
 }
 .user-input.error-input {
   border: 1px solid rgba(255, 91, 86, 1);
