--- a/css/pages/auth.css
+++ b/css/pages/auth.css
@@ -6,37 +6,37 @@ body{
 }
 
 .auth-layout{
-  padding: 238px 0px 117px 0px;
+  padding: 14.875rem 0rem 7.3125rem 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
+  gap: 2rem;
 }
 
 .auth__gap{
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 1.875rem;
 }
 
 .auth-header{
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
 }
 
 .auth-header__massage{
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: .5rem;
   color: var(--black, #000);
   font-family: Pretendard;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 1.5rem; /* 150% */
 }
 
 .auth-header__btn{
@@ -52,21 +52,21 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 1.875rem;
 }
 
 .auth-form__group{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 24px;
+  gap: 1.5rem;
 }
 
 .auth-form__input-group{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 12px;
+  gap: .75rem;
 }
 
 .auth-form__input-group label{
@@ -80,17 +80,17 @@ body{
 
 .auth-form__input-group input{
   display: flex;
-  width: 400px;
-  padding: 18px 15px;
+  width: 25rem;
+  padding: 1.125rem .9375rem;
   justify-content: center;
   align-items: center;
-  border-radius: 8px;
+  border-radius: .5rem;
   border: 1px solid var(--Linkbrary-gray20, #CCD5E3);
   background: var(--Linkbrary-white, #FFF);
 }
 
 .auth-form__input-group input:hover{
-  border-radius: 8px;
+  border-radius: .5rem;
   border: 1px solid var(--Linkbrary-primary-color, #6D6AFE);
   background: var(--Linkbrary-white, #FFF);
 }
@@ -99,67 +99,44 @@ body{
   position: relative;
 }
 
-.auth-form__password-toggle-btn,
-.auth-form__password-toggle-btn.confirm{
+.auth-form__password-toggle-btn{
   border: none;
   background: none;
   padding: 0;
 }
 
-.auth-form__password-icon,
-.auth-form__password-icon.confirm{
+.auth-form__password-icon{
   position: absolute;
-  top: 18px;
-  right: 15px;
-  bottom: 18px;
+  top: 1.125rem;
+  right: .9375rem;
+  bottom: 1.125rem;
 }
-
-.auth-form__wrong-email{
-  display: flex;
-  width: 400px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 6px;
-  color: var(--Linkbrary-gray100, #373740);
-  /* Linkbrary/body1-regular */
-  font-family: Pretendard;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-}
-
-.auth-form__input-group .auth-form__error-sign{
+.auth-form__input-group .auth-form__input--invalid{
   border: 1px solid var(--Linkbrary-red, #FF5B56);
 }
 
-.auth-form__wrong-email{
+.auth-form__input-group .auth-form__input--invalid:hover{
+  border: .125rem solid var(--Linkbrary-red, #FF5B56);
+}
+
+#auth-form__wrong-email,
+#auth-form__wrong-password{
   color: var(--Linkbrary-red, #FF5B56);
   font-family: Pretendard;
-  font-size: 14px;
+  font-size: .875rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-}
+  }
 
-.auth-form__wrong-password,
-.auth-form__wrong-password.confirm{
-  color: var(--Linkbrary-red, #FF5B56);
-  font-family: Pretendard;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.auth-form__auth-btn{
+.auth-form__submit-btn{
   display: flex;
-  width: 400px;
-  padding: 16px 20px;
+  width: 25rem;
+  padding: 1rem 1.25rem;
   justify-content: center;
   align-items: center;
-  gap: 30px;
-  border-radius: 8px;
+  gap: 1.875rem;
+  border-radius: .5rem;
   background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%));
   border-style: none;
   color: var(--Grey-Light, #F5F5F5);
@@ -172,19 +149,19 @@ body{
 
 .social-auth{
   display: flex;
-  width: 400px;
-  padding: 12px 24px;
+  width: 25rem;
+  padding: .75rem 1.5rem;
   justify-content: space-between;
   align-items: center;
   border-radius: 8px;
-  border: 1px solid var(--Linkbrary-gray20, #CCD5E3);
+  border: .0625rem solid var(--Linkbrary-gray20, #CCD5E3);
   background: var(--Linkbrary-gray10, #E7EFFB);
 }
 
 .social-auth__icons{
   display: flex;
   align-items: flex-start;
-  gap: 16px;
+  gap: 1rem;
 }
 
 .social-auth__icon{
@@ -192,56 +169,56 @@ body{
 }
 
 .social-auth__background{
-  width: 42px;
-  height: 42px;
+  width: 2.625rem;
+  height: 2.625rem;
   flex-shrink: 0;
 }
 
 .gooole-icon{
   display: flex;
-  width: 22px;
-  height: 22px;
+  width: 1.375rem;
+  height: 1.375rem;
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
   position: absolute;
-  inset: 10px;
+  inset: .625rem;
 }
 
 .kakao-icon{
-  width: 26px;
-  height: 24px;
+  width: 1.625rem;
+  height: 1.5rem;
   flex-shrink: 0;
   position: absolute;
-  inset: 10px 8px 8px 8px;
+  inset: .625rem .5rem .5rem .5rem;
 }
 
 /* 모바일 사이즈 */
 
-@media (max-width : 767px) {
+@media (max-width : 47.9375rem) {
 main{
-  padding: 120px 32px 0;
+  padding: 7.5rem 2rem 0;
 }
 
 .auth-layout{
   display: flex;
   padding: 0;
   width: auto;
-  max-width: 400px;
+  max-width: 25rem;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
-  gap: 32px;
+  gap: 2rem;
 }
 
 .auth__gap,
 .auth-form__group,
 .auth-form__input-group,
 .auth-form__input-group input,
-.auth-form__auth-btn,
+.auth-form__submit-btn,
 .social-auth{
   width: 100%;
-  max-width: 400px;
+  max-width: 25rem;
   align-items: stretch;
 }
 
