Made signup page event equal to signin pages event

--- a/signup/style-signup.css
+++ b/signup/style-signup.css
@@ -23,8 +23,8 @@ body {
 }
 
 
-.logo {
-  width: 210px;
+.logo > img {
+  width: 250px;
 }
 
 .form {
@@ -42,50 +42,99 @@ body {
   align-items: center;
 }
 
-.text.signup {
+.text-error {
+  display: none;
+  position: absolute;
+  bottom: -20px;
+  color: var(--red);
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.text.signin {
   color: var(--primary); 
 }
 
-label {
+.label {
+  color: var(--black);
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
   text-align: left;
   display: block;
-  margin-top: 24px;
+  margin-top: 32px;
   margin-bottom: 12px;
 }
 
-input {
+.input {
   width: 100%;
   padding: 18px 15px;
   border: 1px solid var(--grey-3);
   border-radius: 8px;
   background: var(--white);
+
+  color: var(--grey-5);
+  /* Linkbrary/body1-regular */
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
 }
 
 input:focus {
   outline-color: var(--primary) ;
 }
 
+.input.error {
+  border: 1px solid var(--red);
+}
+
+.input::placeholder {
+  color: var(--Linkbrary-gray60, #9FA6B2);
+}
+
+.username-container,
 .password-container,
 .repeat-container {
   position: relative;
 }
 
-.eye {
+.repeat-toggle,
+.password-toggle {
+  width: 16px;
+  aspect-ratio: 1/1;
   position: absolute;
   top: 50%;
   right: 15px;
   transform: translate(-50%,-50%);
+  cursor: pointer;
+}
+
+.eye-slash {
+  background: url("../images/eye-off.svg");
+}
+
+.eye {
+  background: url("../images/eye-on.svg");
 }
 
 
-.signup_button {
-  padding: 16px 20px;
+.btn {
+  width: 100%;
+  padding: 16px 15px;
   /* width: 128px; */
   border-radius: 8px;
   background: linear-gradient(91deg, #6d6afe 0.12%, #6AE3FE 101.84%) ;
-  width: 100%;
+
   border: none;
-  margin-top: 30px;
+  margin-top: 46px;
   
   color: var(--off-white);
   font-family: Pretendard;
@@ -105,6 +154,7 @@ input:focus {
 .social {
   width: 100%;
   padding: 3px 24px;
+  margin-top: 32px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -114,11 +164,10 @@ input:focus {
   background: var(--grey-2);
 }
 
-.social-container {
+.icons {
   display: flex;
-  justify-content: space-between;
+  align-items:center;
   gap: 10px;
-  align-items: center;
 }
 
 
