--- a/signin.style.css
+++ b/signin.style.css
@@ -8,11 +8,13 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
 .section {
   position: absolute;
   top: 238px;
-  width: 400px;
-  height: 627px;
+  width: 100%;
+  max-width: 400px;
+  height: 393px;
   gap: 32px;
   display: flex;
   flex-direction: column;
@@ -46,7 +48,11 @@ body {
   display: flex;
   width: 100%;
   height: 24px;
-  gap: 8px;
+  flex-direction: row;
+  align-items: flex-start;
+  /* justify-content: center; */
+}
+.question-text {
   font-family: Pretendard;
   font-size: 16px;
   font-weight: 400;
@@ -54,13 +60,14 @@ body {
   letter-spacing: 0em;
   text-align: left;
 }
-.signinLink {
+.signupLink {
   font-family: Pretendard;
   font-size: 16px;
   font-weight: 600;
   line-height: 19px;
   letter-spacing: 0em;
   text-align: left;
+
   color: rgba(109, 106, 254, 1);
 }
 .text {
@@ -71,21 +78,34 @@ body {
   letter-spacing: 0em;
   text-align: left;
 }
+
 .input {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 16px;
+  gap: 30px;
   width: 100%;
 }
-.input-section {
+.input__section {
   width: 100%;
-  height: 89px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 12px;
+}
+.input-section.password__section {
+  position: relative;
+}
+.error {
+  display: none;
+}
+.errortext {
+  color: rgba(255, 91, 86, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
 }
 .user-input {
   width: 100%;
@@ -94,6 +114,15 @@ body {
   border: 1px solid rgba(204, 213, 227, 1);
   padding: 18px 15px;
 }
+i {
+  position: absolute;
+  left: 90%;
+  top: 45px;
+  z-index: 1;
+}
+.user-input.error-input {
+  border: 1px solid rgba(255, 91, 86, 1);
+}
 .user-input:focus {
   border-color: blue;
   outline: none;
@@ -101,7 +130,7 @@ body {
 button {
   cursor: pointer;
 }
-.signup {
+.signin {
   font-family: Pretendard;
   font-size: 18px;
   font-weight: 600;
